--- a/Page2.html
+++ b/Page2.html
@@ -3,19 +3,23 @@
     <head>
         <meta chartset="UTF-8">
         <meta name="viewport" content ="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>About me</title>
     </head>
     <body>
         <h1><i><u>About Me</u></i></h1>
         <hr>
-        <img style="font-size:small" src=images/dh.jpeg alt="" width="200"> 
-        <p> My name is Sara Victoria C. Plaza. I am an introverted student that only likes fictional men. My pronouns are She/Her although I still simp for fictional men.
-            My role model is inumaki, a fictional man. And I love femboys, which are fictional men. I'm a sane pshs student that loves feeding fictional men. I love reading horror stories
-            about love stories. I also do love to love myself because assessments stress me out. Anyways with all seriousness, I love comforting people slash helping people. I try to adapt
-            in new things which is very hard for me since isolating myself has always been my restort. 
+        <img style="font-size:small" src="pic2.jpg" alt="" width="200" height="200"> 
+        <p> My name is Sara Victoria C. Plaza. I love to discover new things in terms of entertainment such as animes,
+            mangas, manwhas, games, gacha games, etc. The one that I'm currently obsessing over is this game called 'Honkai star rail',
+            mainly because there are many male wives in this Gacha game that actually has the VA of Itadori for the MC. Anyways,
+            more about myself, my pronouns are she/her. I am a slow learner although I really try my best to catch up. That's all.
+            Thank you for reading~~
         </p>
         <hr>
-        <p> Links: </p>
-        <href src="https://github.com/SaraVictoriaPlaza"></href>
+        <p> Links: 
+        <a href="https://github.com/SaraVictoriaPlaza"><img src="Github.jpeg.png" alt="Github Profile" style="width:42px;height:42px;"></a>
+        <a href="https://www.facebook.com/sara.plaza.9843499/"><img src="fb.jpeg" alt="Facebook Profile" style="width:42px;height:42px;"></a>
+        <a href="https://www.tiktok.com/@rms2lostairpods?is_from_webapp=1&sender_device=pc"><img src="tiktoklogo.jpeg" alt="Tiktok Profile" style="width:42px;height:42px;"></a></p>
+  <hr>
     </body>
     </HTML>
