--- a/Plaza_GFA1Page1.html
+++ b/Plaza_GFA1Page1.html
@@ -3,20 +3,26 @@
     <head>
         <meta chartset="UTF-8">
         <meta name="viewport" content ="width=device-width, initial-scale=1.0">
-        <title>Hi! I'm Sara Victoria Plaza</title>
+        <title>Hi! I'm Sara Victoria Plaza!</title>
     </head>
     <body style="background-color:green">
-        <Div><h1 style="text-align;center">Hi! I'm Sara Victoria Plaza</h1>
-        <h3 style="text-align;center">Welcome to my page!</h3>
-        <h6 style="text-align;center"> Project name: SaraVictoriaPlaza_q1gfa1</h6>
+        <Div style="background-color: chartreuse;"><h1 style="text-align:center">Hi! I'm Sara Victoria Plaza!</h1>
+        <h3 style="text-align:center">Welcome to my page!</h3>
+        <h4 style="text-align:center"> Project name: SaraVictoriaPlaza_q1gfa1</h4>
+        <div style="text-align: center;">
         <a>
-            <a href="page2.html"></a>
+            <a href="https://github.com/SaraVictoriaPlaza/SaraVictroriaPlaza_q1gfa1/tree/main/SaraVictoriaPlaza_q1gfa1" alt="Github Project Link">Github Project Link</a>
+            <a href="page2.html" alt="About me">About me</a>
         </a>
+    </div>
+    <hr>
     </Div>
-        <img style="font-size:small" src=images/dh.jpeg alt="" width="200"> 
+        <img style="font-size:small" src="pic1.jpg" alt="" width="200" height="200"> 
         <h2> What is interesting about me?</h2>
         <ol>
-            sexy, cutie, lovely
+            <li>Determined</li>
+            <li>Independent</li>
+            <li>Introverted</li>
         </ol>
     <hr>
     <p> All Rights Reserved. Sara Victoria Plaza 2023</p>
