Plaza_GFA1Page1.html

--- a/Plaza_GFA1Page1.html
+++ b/Plaza_GFA1Page1.html
@@ -17,7 +17,7 @@
     </div>
     <hr>
     </Div>
-        <img style="font-size:small" src="pic1.jpg" alt="" width="200" height="200"> 
+        <img style="font-size:small" src="images/pic1.jpg" alt="" width="200" height="200"> 
         <h2> What is interesting about me?</h2>
         <ol>
             <li>Determined</li>
