--- a/Page2.html
+++ b/Page2.html
@@ -8,7 +8,7 @@
     <body>
         <h1><i><u>About Me</u></i></h1>
         <hr>
-        <img style="font-size:small" src="pic2.jpg" alt="" width="200" height="200"> 
+        <img style="font-size:small" src="images/pic2.jpg" alt="" width="200" height="200"> 
         <p> My name is Sara Victoria C. Plaza. I love to discover new things in terms of entertainment such as animes,
             mangas, manwhas, games, gacha games, etc. The one that I'm currently obsessing over is this game called 'Honkai star rail',
             mainly because there are many male wives in this Gacha game that actually has the VA of Itadori for the MC. Anyways,
@@ -17,9 +17,9 @@
         </p>
         <hr>
         <p> Links: 
-        <a href="https://github.com/SaraVictoriaPlaza"><img src="Github.jpeg.png" alt="Github Profile" style="width:42px;height:42px;"></a>
-        <a href="https://www.facebook.com/sara.plaza.9843499/"><img src="fb.jpeg" alt="Facebook Profile" style="width:42px;height:42px;"></a>
-        <a href="https://www.tiktok.com/@rms2lostairpods?is_from_webapp=1&sender_device=pc"><img src="tiktoklogo.jpeg" alt="Tiktok Profile" style="width:42px;height:42px;"></a></p>
+        <a href="https://github.com/SaraVictoriaPlaza"><img src="images/Github.jpeg.png" alt="Github Profile" style="width:42px;height:42px;"></a>
+        <a href="https://www.facebook.com/sara.plaza.9843499/"><img src="images/fb.jpeg" alt="Facebook Profile" style="width:42px;height:42px;"></a>
+        <a href="https://www.tiktok.com/@rms2lostairpods?is_from_webapp=1&sender_device=pc"><img src="images/tiktoklogo.jpeg" alt="Tiktok Profile" style="width:42px;height:42px;"></a></p>
   <hr>
     </body>
     </HTML>
