--- a/Page2.html
+++ b/Page2.html
@@ -17,7 +17,7 @@
         </p>
         <hr>
         <p> Links: 
-        <a href="https://github.com/SaraVictoriaPlaza"><img src="images/Github.jpeg.png" alt="Github Profile" style="width:42px;height:42px;"></a>
+        <a href="https://github.com/SaraVictoriaPlaza"><img src="images/Github.png" alt="Github Profile" style="width:42px;height:42px;"></a>
         <a href="https://www.facebook.com/sara.plaza.9843499/"><img src="images/fb.jpeg" alt="Facebook Profile" style="width:42px;height:42px;"></a>
         <a href="https://www.tiktok.com/@rms2lostairpods?is_from_webapp=1&sender_device=pc"><img src="images/tiktoklogo.jpeg" alt="Tiktok Profile" style="width:42px;height:42px;"></a></p>
   <hr>
